# vsporte-auth-server

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-app.yml  pyproject.toml  runapp.sh
migrations/: env.py
migrations/versions/: 2023_12_11_2033-8645bc0c040c_.py  2023_12_12_2357-ce3aee0ba471_.py  2023_12_13_0245-45d30985f99c_.py
src/: main.py
src/database/: session.py
src/database/models/: __init__.py  role_in_service.py  user.py
src/database/queries/: __init__.py  service_roles.py  user.py
src/env_config/: __init__.py  prepare.py
src/logic/: __init__.py  hash_password.py  jwt_functions.py  permissions.py
